--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
   http: ^0.13.4
+  shared_preferences: ^2.0.11
   logger: ^1.1.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
